# servman

./: .gitignore  Cargo.toml  README.md  Rocket.toml  config.json
src/: config.rs  main.rs  mods.rs  server.rs
