[package]
name = "servman"
version = "0.1.0"
authors = ["arioz0330 <arios2@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
serde-xml-rs = "0.4.1"
serde_json = "1.0.62"
lazy_static = "1.4.0"
tokio = "0.2.25"

[dependencies.reqwest]
version = "0.11.0"
features = ["json"]

[dependencies.serde]
version = "1.0.123"
default-features = false
features = ["derive"]

[profile.release]
lto = 'thin'
panic = 'abort'
codegen-units = 1

[profile.bench]
lto = 'thin'
codegen-units = 1