[package]
name = "servman"
version = "0.1.0"
authors = ["axriosn <axriosn@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
serde-xml-rs = "0.5.1"
lazy_static = "1.4.0"
async-mutex = "1.4.0"
attohttpc = "0.18.0"

[dependencies.serde]
version = "1.0.136"
default-features = false
features = ["derive"]

[profile.release]
lto = 'thin'
panic = 'abort'
codegen-units = 1

[profile.bench]
lto = 'thin'
codegen-units = 1